# patrick-williams.com

./: .gitignore  README.md
ansible/: README.md  ansible.cfg  initialize.yml  inventory.ini  site.yml  website.yml
ansible/group_vars/: all.yml  website.yml
ansible/roles/NYTTester_setup/tasks/: main.yml
ansible/roles/common/tasks/: main.yml
ansible/roles/docker/tasks/: main.yml
ansible/roles/nginx/tasks/: main.yml
ansible/roles/patsite/meta/: main.yml
docker/: Dockerfile  README.md  boot.sh  config.py  patrickwilliamswebsite-1.3.2-py3-none-any.whl  patrickwilliamswebsite-1.3.4-py3-none-any.whl  patrickwilliamswebsite-1.3.5-py3-none-any.whl  patrickwilliamswebsite-1.4.1-py3-none-any.whl  requirements.txt
docker/wordChecker/: checkDictionary.py  retrieve.py  visibilityTest.py
flask/: .flaskenv  .gitignore  Dockerfile  PatrickWilliamsWebsite.py  README.md  boot.sh  pyproject.toml  requirements.txt
flask/PatrickWilliamsWebsite/: __init__.py  checkDictionary.py  db.py  index.py  models.py  schema.sql  solver.py
flask/PatrickWilliamsWebsite/app/: lbHelper.py
flask/PatrickWilliamsWebsite/app/shared/: checkDictionary.py  log.txt  solvers.sqlite
flask/PatrickWilliamsWebsite/static/: style.css
flask/PatrickWilliamsWebsite/templates/: base.html  index.html
flask/PatrickWilliamsWebsite/templates/solver/: answer.html  letter_box.html  letter_box_help.html  spellingbee.html
flask/migrations/versions/: c7c7ae47ebf3_bees_and_boxes.py
terraform/: .gitignore  README.md  backend.tf  dns.tf  ec2.tf  ec2_security_group.tf  main.tf  network.tf  variables.tf
(+10 files in other folders)
