[project]
name = "PatrickWilliamsWebsite"
version = "1.3.5"
description = "A personal website for Patrick Williams"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "Flask",
    "flask-mailman",
    "email-validator",
    "waitress",
]
[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
