[project]
name = "PatrickWilliamsWebsite"
version = "1.5.1"
description = "A personal website for Patrick Williams"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "Flask=3.1.0",
    "flask-mailman=1.1.1",
    "email-validator=2.2.0",
    "waitress=3.0.2 ",
    "flask-sqlalchemy=3.1.1",
    "flask-migrate=4.0.7 "
]
[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
